unpackaged/objects/Order.object
<CustomObject>
  <fields>
    <fullName>Order_subtype__c</fullName>
    <label>Order subtype</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Order_Type__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Telesales</fullName>
        </value>
        <value>
          <fullName>Austenal</fullName>
        </value>
        <value>
          <fullName>Ceramco</fullName>
        </value>
        <value>
          <fullName>Institutional</fullName>
        </value>
        <value>
          <fullName>Midwest</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Austenal &amp; Trubyte</fullName>
        </value>
        <value>
          <fullName>Offers</fullName>
        </value>
        <value>
          <fullName>Standard</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Orders_Related_to_CFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orders Related to CFE</label>
    <referenceTo>Orders_Related_to_CFE__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Overdue_Invoice_Age__c</fullName>
    <formula>Account.Credit_Limit_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Invoice Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Overdue_Invoice_Amount_at_this_Account__c</fullName>
    <formula>Account.Outstanding_Invoice_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Invoice Amount at this Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>PDFButlerAlternativeName__c</fullName>
    <formula>UserCountryETM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Butler Alternative Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PDFButlerDraft__c</fullName>
    <formula>if(TEXT(Status)='Activated', '' , '-Draft')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Butler Draft</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PDFButlerEmailDistributionList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDF Butler Email Distribution List</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (PDF Butler Email Distribution List)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>PDFButlerLocale__c</fullName>
    <formula>TEXT($User.LanguageLocaleKey)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Butler Locale</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PPN10__c</fullName>
    <formula>Order_Amount_global__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPN 10%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Payment_Period__c</fullName>
    <description>Indonesia has the legal requirement to indicate on each order sent out, which payment terms (time-wise in a sense of "When is the order amount being settled by the customer?) the customer is choosing</description>
    <label>Payment Period</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>TOP14</fullName>
        </value>
        <value>
          <fullName>TOP30</fullName>
        </value>
        <value>
          <fullName>Transfer prior to delivery</fullName>
        </value>
        <value>
          <fullName>Cash on Delivery </fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Payment_terms_months__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Payment terms (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Payment_type__c</fullName>
    <inlineHelpText>Please choose the payment type by which the customer would like to pay</inlineHelpText>
    <label>Payment type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>DS credit card</fullName>
        </value>
        <value>
          <fullName>Credit card</fullName>
        </value>
        <value>
          <fullName>Bank transfer</fullName>
        </value>
        <value>
          <fullName>Promissory note</fullName>
        </value>
        <value>
          <fullName>Cheque</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Payment_type_discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment type discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Pricebook_Name__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Profile_Order_Creator__c</fullName>
    <formula>CreatedBy.Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Order Creator</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Project_Team_Approval_Required__c</fullName>
    <formula>IF( OR( Prospect_at_the_point_of_order_entry__c=TRUE, Account_Record_Type__c  = "Clinical PROSPECT"), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Team Approval Required</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Project_Team_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by workflow/approval process</description>
    <label>Project Team Approved</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Project_Team_Date_Time_Completed__c</fullName>
    <label>Project Team Date/Time Completed</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Project_Team_Date_Time_Received__c</fullName>
    <label>Project Team Date/Time Received</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Prospect_at_the_point_of_order_entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by a workflow at the point of order entry - evaluates the record type of the original account to determine processing by the customer service team</description>
    <label>Prospect at the point of order entry</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Quote_Status__c</fullName>
    <description>Field to set the status of the quote</description>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Created</fullName>
        </value>
        <value>
          <fullName>Emailed to Customer</fullName>
        </value>
        <value>
          <fullName>Confirmed by Customer</fullName>
        </value>
        <value>
          <fullName>Order</fullName>
        </value>
        <value>
          <fullName>No Order</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Regional_Manager_Approval_Required__c</fullName>
    <formula>IF(
OR(
AND( Discount_Approval_Needed__c  &gt; 0,  Non_SIMPLANT_Items__c&gt;=1,  SIMPLANT_Included__c &gt;=0), 
AND( Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c&gt;=0,  SIMPLANT_Included__c &gt;0,  Waive_Shipping_Charges__c =TRUE),
AND( Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c&gt;=0,  SIMPLANT_Included__c &gt;0),
AND(Non_SIMPLANT_Items__c &gt;0, Waive_Shipping_Charges__c =TRUE),
AND( SIMPLANT_Included__c &gt;=0, Non_SIMPLANT_Items__c &gt;=1,Waive_Shipping_Charges__c =TRUE)),
 TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Manager Approval Required</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Regional_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regional Manager Approved</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Regional_Manager_E_mail__c</fullName>
    <label>Regional Manager E-mail</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_CS_Approval_Required__c</fullName>
    <formula>if(SIMPLANT_Software_Evaluation__c  &lt;&gt; 0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIMPLANT CS Approval Required</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Customer_Service_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIMPLANT Customer Service Approved</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Director_Approval__c</fullName>
    <formula>IF(OR
(AND
(SIMPLANT_Included__c &gt;0,  Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c =0,  Waive_Shipping_Charges__c =TRUE),
AND( SIMPLANT_Included__c &gt;0,  Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c =0)), TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIMPLANT Director Approval Required</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Director_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by workflow/approvals</description>
    <label>SIMPLANT Director Approved</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Included__c</fullName>
    <label>SIMPLANT Included</label>
    <summarizedField>OrderItem.SIMPLANT_Line_Item__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>SIMPLANT_Software_Evaluation__c</fullName>
    <label>SIMPLANT Software Evaluation</label>
    <summarizedField>OrderItem.SIMPLANT_Software_Line_Item__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>SalesLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TFUS-000003080</description>
    <label>Sales Lead</label>
    <referenceTo>Field_Sales_Project_Members__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Sales_Rep_Address__c</fullName>
    <formula>if(  Ship_to_Sales_Rep__c =False,"",

if(isblank(Account_for_Sample_in_AX__c),"",
if(isblank(Account_for_Sample_in_AX__r.ShippingStreet),"", Account_for_Sample_in_AX__r.ShippingStreet) &amp; if(isblank(Account_for_Sample_in_AX__r.ShippingPostalCode),"", " , " &amp; Account_for_Sample_in_AX__r.ShippingPostalCode)&amp;
if (isblank(Account_for_Sample_in_AX__r.ShippingCity),"", " , " &amp;  Account_for_Sample_in_AX__r.ShippingCity)&amp;
if(isblank( Account_for_Sample_in_AX__r.ShippingState),"", " , " &amp;  Account_for_Sample_in_AX__r.ShippingState)&amp;
if(isblank(Account_for_Sample_in_AX__r.ShippingCountry),"", " , "  &amp; Account_for_Sample_in_AX__r.ShippingCountry)))</formula>
    <label>Sales Rep Address</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Sample_Order__c</fullName>
    <formula>if(  isblank(Account_for_Sample_in_AX__c ),False,True)</formula>
    <label>Sample Order</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Secondary_Distributor_Email__c</fullName>
    <inlineHelpText>Please specify another email for the distributor in case of need</inlineHelpText>
    <label>Secondary Distributor Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Send_order_manually__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for US to control that a distributor order is not sent to dealer via EDI</description>
    <label>Not to send order to EDI automatically</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Ship_Method__c</fullName>
    <description>Picklist field (required) only on the Prosthetics Direct Orders (USC - US)</description>
    <label>Ship Method</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>COD</fullName>
        </value>
        <value>
          <fullName>FedEx - Ground</fullName>
        </value>
        <value>
          <fullName>FedEx – 1 Day</fullName>
        </value>
        <value>
          <fullName>FedEx – 2 Day</fullName>
        </value>
        <value>
          <fullName>UPS - Ground</fullName>
        </value>
        <value>
          <fullName>UPS – 2 Day</fullName>
        </value>
        <value>
          <fullName>UPS – 3 Day</fullName>
        </value>
        <value>
          <fullName>UPS – Overnight</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Ship_from__c</fullName>
    <label>Ship from</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Distributor</fullName>
        </value>
        <value>
          <fullName>Dentsply</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Ship_to_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship to Sales Rep</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Shipping_Charges__c</fullName>
    <inlineHelpText>If Discounted Shipping -Please indicate the Discount in  Discounted Shipping Type.</inlineHelpText>
    <label>Shipping Charges</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Bill Customer for Shipping</fullName>
          <default>true</default>
          <label>Bill Customer for Shipping</label>
        </value>
        <value>
          <fullName>Waive Shipping</fullName>
        </value>
        <value>
          <fullName>Discounted Shipping</fullName>
        </value>
        <value>
          <fullName>SIMPLANT Software Only - No Shipping Required</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Shipping_Method__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_CountryPL__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>UFJ: F IntnlPriority: FedEx Intnl Priority Warehouse</fullName>
        </value>
        <value>
          <fullName>FedEx 2nd Day PM - UFE $14.50</fullName>
        </value>
        <value>
          <fullName>FedEx 3rd Day PM: UFF $13</fullName>
        </value>
        <value>
          <fullName>FedEx Next Day 10:30am - UFB $27.00</fullName>
        </value>
        <value>
          <fullName>FedEx Next Day end of day - UFC $20.50</fullName>
        </value>
        <value>
          <fullName>FedEx Next Day Early AM - 6-8:30am - UFA $49.50</fullName>
        </value>
        <value>
          <fullName>FedEx Saturday 10:30am - UFH $49.50</fullName>
        </value>
        <value>
          <fullName>UPS 2nd Day PM - UXE $14.50</fullName>
          <default>true</default>
          <label>UPS 2nd Day PM - UXE $14.50</label>
        </value>
        <value>
          <fullName>UPS 2nd Day AM - UXD-$16.50</fullName>
        </value>
        <value>
          <fullName>UPS Next Day 10:30am - UXB $27.00</fullName>
        </value>
        <value>
          <fullName>UPS Next Day end of day - UXC $20.50</fullName>
        </value>
        <value>
          <fullName>UPS Ground - UXG $8.50</fullName>
        </value>
        <value>
          <fullName>UPS Saturday 10:30am - UXH $49.50</fullName>
        </value>
        <value>
          <fullName>SIMPLANT- No Shipping</fullName>
        </value>
        <value>
          <fullName>UPS COD Next Day 10:30 AM: UX2</fullName>
        </value>
        <value>
          <fullName>UPS COD Next Day PM: UX3</fullName>
        </value>
        <value>
          <fullName>UPS COD 2nd Day PM:  UX5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SourceRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#1674</description>
    <label>Source Record</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>$Source.AccountId</field>
        <operation>equals</operation>
        <valueField>Source_Record__c.CIM_Account__c</valueField>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Source_Record__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked only when the approval process has been enabled. This is to create a validation rule, such that only the approval process can change the Status</description>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Total_After_PPN__c</fullName>
    <formula>Order_Amount_global__c * 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total After PPN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Total_Bundle_Discount__c</fullName>
    <label>Total Bundle Discount</label>
    <summarizedField>Order_bundle__c.Order_Bundle_Discount_Amount__c</summarizedField>
    <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Total_Order_Discount__c</fullName>
    <description>(Order Amount before Discount has been subtracted) MINUS (Order Amount after Discount has been substracted) = Order Discount</description>
    <formula>-(Order_amount_before_disc_globa__c  -   TotalAmount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Total_bundle_product_in_the_order__c</fullName>
    <label>Total #bundle product in the order</label>
    <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Total_of_Products_on_this_Order__c</fullName>
    <label>Total # of Products on this Order</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <description>field for USC to manage special DOD offer</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>User_CountryPL__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>New Customer</fullName>
        </value>
        <value>
          <fullName>New User 1+1</fullName>
          <isActive>false</isActive>
          <label>New User 1+1</label>
        </value>
        <value>
          <fullName>New User 2+1</fullName>
        </value>
        <value>
          <fullName>Tessera Trade Out B7,T3,G3</fullName>
        </value>
        <value>
          <fullName>Trade In</fullName>
        </value>
        <value>
          <fullName>Tradeout 1+1</fullName>
          <isActive>false</isActive>
          <label>Tradeout 1+1</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>US_Telesales_Order__c</fullName>
    <formula>If(  US__c =True, True,
if(Owner:User.Profile.Id = '00e0J000001Ar3p', True, False))</formula>
    <label>US Telesales Order</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>US_Telsales__c</fullName>
    <formula>CreatedBy.US_TeleSales_Team_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>US TeleSales Team Name</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>US__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field managed using approval process to track if in the order was created by a person that at the creation time had a Telesales profile</description>
    <label>US Telesales Order Historical</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>UserCountryETM__c</fullName>
    <formula>text(Owner:User.User_Country__c)</formula>
    <label>UserCountryETM</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>User_CountryPL__c</fullName>
    <label>User CountryPL</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>BEX</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Croatia</fullName>
        </value>
        <value>
          <fullName>Cyprus</fullName>
        </value>
        <value>
          <fullName>Czech Republic</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>Distributor Markets</fullName>
        </value>
        <value>
          <fullName>Egypt</fullName>
        </value>
        <value>
          <fullName>Estonia</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Greece</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ: DE</fullName>
        </value>
        <value>
          <fullName>HQ: NL</fullName>
        </value>
        <value>
          <fullName>HQ: SE</fullName>
        </value>
        <value>
          <fullName>Hungary</fullName>
        </value>
        <value>
          <fullName>INDIA</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Jordan</fullName>
        </value>
        <value>
          <fullName>Kazakhstan</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>User_Geography__c</fullName>
    <formula>CreatedBy.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>VAT_Number__c</fullName>
    <formula>if(isblank( Account.Vat_Registration_No__c ), IMAGE("/servlet/servlet.FileDownload?file=01520000000mkdN", "KO", 30, 30) , Account.Vat_Registration_No__c )</formula>
    <label>VAT Number</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Waive_Shipping_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, the customer has requested free shipping. By checking this box, additional approvals will be required.</inlineHelpText>
    <label>Waive Shipping Charges</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Was_this_Order_ever_put_ON_HOLD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was this Order ever put ON HOLD</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>amount_of_foc_products_eith_currency__c</fullName>
    <description>To mantain the currency of the country for approval process</description>
    <formula>Amount_of_free_of_charge_products__c</formula>
    <label>amount of foc products with currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>items_for_free__c</fullName>
    <description>roll up on the products with 100% discount</description>
    <label># items for free</label>
    <summaryFilterItems>
      <field>OrderItem.Discount_Percent__c</field>
      <operation>equals</operation>
      <value>100</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>sample_products__c</fullName>
    <label># sample products</label>
    <summaryFilterItems>
      <field>OrderItem.Discount_Percent__c</field>
      <operation>equals</operation>
      <value>100</value>
    </summaryFilterItems>
    <summaryFilterItems>
      <field>OrderItem.Value_of_Samples_for_Sales_Rep__c</field>
      <operation>greaterThan</operation>
      <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>submitted_date__c</fullName>
    <label>submitted date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>total_discount_on_the_order_c__c</fullName>
    <description>The % discount doesn not count the percentage of discount in the bundle</description>
    <formula>if ((TotalAmount+ Order_bundle_amount__c)=0,0,( (TotalAmount+ Order_bundle_amount__c) - Order_Amount_global__c )/TotalAmount )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of total discount (discount on the product line + discount on the total order amount)</inlineHelpText>
    <label>% total discount on the order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
  </fields>
  <listViews>
    <fullName>All_Order</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Distributor__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>Order_Type__c</columns>
    <columns>Order_subtype__c</columns>
    <columns>Order_Amount_global__c</columns>
    <columns>total_discount_on_the_order_c__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Total_of_Products_on_this_Order__c</columns>
    <columns>UserCountryETM__c</columns>
    <columns>User_Geography__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
    <language>en_US</language>
    <sharedTo>
      <roleAndSubordinates>Benelux_CRM_Analyst</roleAndSubordinates>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>CANIMPLANTS_CS_INBOX_ALL_Pending</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Customer_Service_Rep_Responsible__c</columns>
    <columns>ORDER.RECORDTYPE</columns>
    <columns>Customer_Service_Received__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Location__c</columns>
    <columns>Total_of_Products_on_this_Order__c</columns>
    <columns>ORDER.SHIPPING_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Location__c</field>
      <operation>startsWith</operation>
      <value>CS Inbox -</value>
    </filters>
    <filters>
      <field>ORDER.RECORDTYPE</field>
      <operation>equals</operation>
      <value>Order.Implants_NA_Orders</value>
    </filters>
    <filters>
      <field>CS_Inbox_Approved__c</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <filters>
      <field>PRICEBOOK2.NAME</field>
      <operation>startsWith</operation>
      <value>US IMP</value>
    </filters>
    <label>CAN IMPLANTS CS INBOX ALL Pending</label>
    <sharedTo>
      <role>DNA_Shared_Services</role>
      <role>NA_CRM_Analyst</role>
      <role>NA_Customer_Service_Implants</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>CIS_All_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>User_Geography__c</field>
      <operation>equals</operation>
      <value>Ukraine,Russia,Belarus,Kazakhstan</value>
    </filters>
    <label>CIS: All Orders</label>
    <language>en_US</language>
    <sharedTo>
      <roleAndSubordinatesInternal>CIS_CRM_Analyst</roleAndSubordinatesInternal>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>CS_INBOX_ALL</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Customer_Service_Received__c</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Prospect_at_the_point_of_order_entry__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Customer_Service_Rep_Responsible__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Total_of_Products_on_this_Order__c</columns>
    <columns>SIMPLANT_CS_Approval_Required__c</columns>
    <columns>ORDER.SHIPPING_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Location__c</field>
      <operation>startsWith</operation>
      <value>CS Inbox -</value>
    </filters>
    <filters>
      <field>ORDER.RECORDTYPE</field>
      <operation>equals</operation>
      <value>Order.Direct_global_order</value>
    </filters>
    <filters>
      <field>CS_Inbox_Approved__c</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <filters>
      <field>PRICEBOOK2.NAME</field>
      <operation>startsWith</operation>
      <value>US IMP,CA IMP</value>
    </filters>
    <label>NA: CS INBOX ALL Pending</label>
    <sharedTo>
      <group>NA_DI_Customer_Service_and_Mgmt</group>
      <role>DNA_Shared_Services</role>
      <role>NA_CRM_Analyst</role>
      <role>NA_Customer_Service_Implants</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>CS_Proj_Team_All_Pending</fullName>
    <booleanFilter>5 OR (1 AND 2 AND 3 AND 4)</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>Account_Record_Type__c</columns>
    <columns>Location__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Prospect_at_the_point_of_order_entry__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Total_of_Products_on_this_Order__c</columns>
    <columns>Shipping_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Project_Team_Approval_Required__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>CS_Inbox_Approved__c</field>
      <operation>equals</operation>
      <value>1</value>
    </filters>
    <filters>
      <field>Project_Team_Approved__c</field>
      <operation>equals</operation>
      <value>0</value>
    </filters>
    <filters>
      <field>ORDERS.STATUS</field>
      <operation>notEqual</operation>
      <value>Created,Activated,Rejected</value>
    </filters>
    <filters>
      <field>Location__c</field>
      <operation>startsWith</operation>
      <value>Proj</value>
    </filters>
    <label>CS Proj Team All Pending</label>
    <language>en_US</language>
    <sharedTo>
      <group>NA_DI_Customer_Service_and_Mgmt</group>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>DE_PRE_incoming_orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Order_Owner__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Order_Amount_global__c</columns>
    <columns>Amount_of_free_of_charge_products__c</columns>
    <columns>total_discount_on_the_order_c__c</columns>
    <columns>Sample_Order__c</columns>
    <columns>Customer_Service_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>ORDER.RECORDTYPE</field>
      <operation>equals</operation>
      <value>Order.Indirect_global_order,Order.Direct_global_order</value>
    </filters>
    <filters>
      <field>UserCountryETM__c</field>
      <operation>equals</operation>
      <value>Germany,Austria</value>
    </filters>
    <filters>
      <field>ORDERS.STATUS</field>
      <operation>equals</operation>
      <value>Submitted</value>
    </filters>
    <filters>
      <field>Customer_Service_Received__c</field>
      <operation>notEqual</operation>
    </filters>
    <filters>
      <field>Customer_Service_Date_Time_Completed__c</field>
      <operation>equals</operation>
    </filters>
    <label>DE: PRE incoming orders</label>
    <language>en_US</language>
    <sharedTo>
      <group>AT_DE_PRE_CustomerService</group>
    </sharedTo>
  </listViews>
</CustomObject>